Added Sey's styling + media queries

--- a/a2.css
+++ b/a2.css
@@ -3,12 +3,13 @@
 }
 
 body {
-    font-family: 'Josefin Sans';
-    background-color: #ab2434;
+    background-image: linear-gradient(to bottom, #d86b93, white);
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: oblique;
 }
 
 h1 {
-    margin-top: 2em;
+    margin-top: 1.5em;
     text-align: center;
     color: #f7f7f7;
 }
@@ -20,6 +21,8 @@ h1 {
     margin: auto;
     border-radius: 2%;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 3em;
     box-shadow: .8em .8em 15px rgba(0, 0, 0, .3);
@@ -66,7 +69,6 @@ h1 {
 footer {
     margin: 1em auto;
     text-align: center;
-    color: white;
 }
 
 a {
@@ -76,4 +78,33 @@ a {
 a:hover {
     background: #ab2434;
     color: #f7f7f7;
+}
+
+@media only screen and (max-width: 800px) {
+    body {
+        text-align: center;
+    }
+
+    .postcard {
+        width: 90%;
+        height: max-content;
+        overflow-wrap: break-word;
+        padding: 2em;
+    }
+
+    .pitch {
+        width: 100%;
+        height: max-content;
+        padding: 1em;
+    }
+
+    .mail_stamp {
+        display: none;
+    }
+
+    .download {
+        border-top: 1px solid black;
+        margin-top: 1.5em;
+        padding-top: 1.5em;
+    }
 }
